# AsyncCallQueue

./: .gitignore  AsyncCallQueue.hpp  AsyncInvokable.hpp  CMakeLists.txt  ConcurrentDeque.hpp  Copiable.hpp  LICENSE  LICENSE.txt  NotCopiable.hpp  README.md  TestAsyncCallQueue.cpp  TestHeader.h  main.cpp
Test/: Copyable.hpp  MoveOnly.hpp  TestAsyncCallQueue.cpp  TestHeader.h
include/: AsyncCallQueue.hpp  AsyncInvokable.hpp
test/: NotCopiable.hpp  TestAsyncCallQueue.cpp  TestHeader.h
